# Casemap4

./: .env.example  .gitignore  .vercelignore  README.md  app.py  build_enriched.sh  build_v2.sh  internal_app.py  pyproject.toml  requirements.txt  run_batch.sh  run_civil.sh  run_continuous.sh  run_criminal.sh  run_pipeline.sh  test_accuracy.py
.github/workflows/: agentpay-guard-ci.yml  pipeline.yml
agentpay-guard/: .gitignore  README.md  SECURITY.md  package.json
agentpay-guard/.design/: agentpay-ui-style.md
agentpay-guard/data/: ofac-demo.json
agentpay-guard/docs/: AI_ORCHESTRATION.md  DEMO_GUIDE.md  evidence-pack.md  product-demo.md  roadmap.md  threat-model.md
agentpay-guard/examples/: payment-approved.json  payment-blocked.json  payment-human-approval.json
agentpay-guard/scripts/: deepseek-worker.mjs  demo-seed.mjs  verify-v01.mjs
agentpay-guard/tests/: api.test.js  core.test.js  demo-agents.test.js  security.test.js
artifacts/hk_civil_graph/: build_progress.json  chroma_records.json  embedding_records.json  manifest.json  monitor_report.html  monitor_report.json  relationship_graph.json  relationship_map.html  relationship_tree.html  supabase_export.sql
docs/: codex_workflow.md  project_handoff.md
tests/: test_candidate_supabase_sync.py  test_case_analysis.py  test_cumulative_hybrid_merge.py  test_domain_framework.py  test_golden_retrieval.py  test_lineage_discovery.py  test_lineage_rag.py  test_market_misconduct_grounding.py  test_no_hallucination.py  test_paragraph_index.py  test_similar_cases.py  test_supabase_chunk_rpc.py
(+413 files in other folders)
